Created units model

--- a/app/views/cultures/index.html.erb
+++ b/app/views/cultures/index.html.erb
@@ -2,7 +2,8 @@
 
 <h1>Cultures</h1>
 
-<%= link_to "Manage unit types", unit_types_path %>
+<%= link_to "Manage unit types", unit_types_path %> <br />
+<%= link_to "Manage units", units_path %>
 
 <table>
   <thead>
